--- a/doubletapplayerview/build.gradle
+++ b/doubletapplayerview/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: 'com.android.library'
+plugins {
+	id 'com.android.library'
+}
+
 
 android {
 	namespace 'com.mrikso.player'
@@ -7,7 +10,7 @@ android {
 
 	defaultConfig {
 		minSdkVersion 16
-		targetSdkVersion 33
+		targetSdkVersion 34
 
 		vectorDrawables.useSupportLibrary = true
 
@@ -21,28 +24,31 @@ android {
 		}
 	}
 
+	lintOptions {
+		abortOnError false
+	}
+
 	compileOptions {
-		sourceCompatibility JavaVersion.VERSION_1_8
-		targetCompatibility JavaVersion.VERSION_1_8
+		sourceCompatibility JavaVersion.VERSION_11
+		targetCompatibility JavaVersion.VERSION_11
 	}
+}
+dependencies {
+	implementation "androidx.recyclerview:recyclerview:1.3.0"
+	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-	dependencies {
-		implementation "androidx.recyclerview:recyclerview:1.3.0"
-		implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+	def media3_version = '1.2.0'
+	// For media playback using ExoPlayer
+	implementation "androidx.media3:media3-exoplayer:$media3_version"
+	implementation "androidx.media3:media3-session:$media3_version"
+	implementation "androidx.media3:media3-datasource:$media3_version"
+	implementation "androidx.media3:media3-decoder:$media3_version"
+	implementation "androidx.media3:media3-common:$media3_version"
+	implementation "androidx.media3:media3-exoplayer-dash:$media3_version"
+	implementation "androidx.media3:media3-exoplayer-hls:$media3_version"
+	implementation "androidx.media3:media3-exoplayer-smoothstreaming:$media3_version"
+	implementation"androidx.media3:media3-exoplayer-rtsp:$media3_version"
+	// For building media playback UIs
+	implementation "androidx.media3:media3-ui:$media3_version"
 
-		def media3_version = '1.0.2'
-		// For media playback using ExoPlayer
-		implementation "androidx.media3:media3-exoplayer:$media3_version"
-		implementation "androidx.media3:media3-session:$media3_version"
-		implementation "androidx.media3:media3-datasource:$media3_version"
-		implementation "androidx.media3:media3-decoder:$media3_version"
-		implementation "androidx.media3:media3-common:$media3_version"
-		implementation "androidx.media3:media3-exoplayer-dash:$media3_version"
-		implementation "androidx.media3:media3-exoplayer-hls:$media3_version"
-		implementation "androidx.media3:media3-exoplayer-smoothstreaming:$media3_version"
-		implementation"androidx.media3:media3-exoplayer-rtsp:$media3_version"
-		// For building media playback UIs
-		implementation "androidx.media3:media3-ui:$media3_version"
-
-	}
 }
