--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,8 @@ pluginManagement {
 		google()
 		mavenCentral()
 		maven { url 'https://jitpack.io' }
+		mavenLocal()
+		jcenter()
 	}
 }
 dependencyResolutionManagement {
@@ -12,8 +14,11 @@ dependencyResolutionManagement {
 		google()
 		mavenCentral()
 		maven { url 'https://jitpack.io' }
+		mavenLocal()
+		jcenter()
 	}
 }
+
 rootProject.name = "AnitubeApp"
 include ':app'
 include ':treeview'
