--- a/bottomsheetMenu/build.gradle
+++ b/bottomsheetMenu/build.gradle
@@ -10,8 +10,8 @@ android {
 	namespace = "com.mazenrashed.bottomsheetmenulib"
 
 	defaultConfig {
-		minSdkVersion 21
-		targetSdkVersion 33
+		minSdk 28
+		targetSdk 34
 		versionCode 1
 		versionName "1.0"
 
@@ -39,7 +39,7 @@ android {
 
 dependencies {
 	implementation 'androidx.appcompat:appcompat:1.6.1'
-	implementation "androidx.recyclerview:recyclerview:1.3.0"
+	implementation 'androidx.recyclerview:recyclerview:1.3.2'
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-	implementation 'com.google.android.material:material:1.9.0'
+	implementation 'com.google.android.material:material:1.11.0'
 }
