--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'com.android.application'
 	id 'org.jetbrains.kotlin.android'
 	id 'androidx.navigation.safeargs'
-	id 'kotlin-kapt'
+	id 'com.google.devtools.ksp'
 	id 'com.google.dagger.hilt.android'
 }
 
@@ -49,15 +49,13 @@ android {
 		targetCompatibility JavaVersion.VERSION_11
 	}
 
-
-	tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-		kotlinOptions {
-			jvmTarget = JavaVersion.VERSION_11 // starting with AGP 7.4.0 we need to target JVM 11 bytecode
-		}
+	kotlinOptions {
+		jvmTarget = "11"
 	}
 
 	buildFeatures {
 		viewBinding true
+		buildConfig true
 	}
 
 	lintOptions {
@@ -71,7 +69,6 @@ dependencies {
 	def paging_version = "3.2.1"
 	def room_version = "2.6.1"
 	def lifecycle_version = "2.7.0"
-	def navigation_version = "2.7.6"
 
 	// AndroidX
 	implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -79,34 +76,34 @@ dependencies {
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 	implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 	// navigation
-	implementation "androidx.navigation:navigation-fragment:$nav_version"
-	implementation "androidx.navigation:navigation-ui:$nav_version"
+	implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+	implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 	implementation 'androidx.core:core-splashscreen:1.0.1'
 
 	// ViewModel
-	implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+	implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 	// LiveData
-	implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
-	implementation 'androidx.preference:preference:1.2.0'
+	implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+	implementation 'androidx.preference:preference-ktx:1.2.1'
 
 	// Room
 	implementation "androidx.room:room-runtime:$room_version"
 	implementation "androidx.room:room-paging:$room_version"
 	implementation "androidx.room:room-rxjava3:$room_version"
-	kapt "androidx.room:room-compiler:$room_version"
+	ksp "androidx.room:room-compiler:$room_version"
 
 	implementation 'com.github.MZCretin:ExpandableTextView:v1.6.1-x'
 
 	// Retrofit
-	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-	implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
-	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-	implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
+	implementation 'com.squareup.retrofit2:retrofit:2.11.0'
+	implementation 'com.squareup.retrofit2:converter-scalars:2.11.0'
+	implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
+	implementation('com.squareup.okhttp3:logging-interceptor:4.12.0')
 	// jsoup
-	implementation 'org.jsoup:jsoup:1.16.1'
+	implementation 'org.jsoup:jsoup:1.17.2'
 
 	// Gson
-	implementation 'com.google.code.gson:gson:2.9.0'
+	implementation 'com.google.code.gson:gson:2.10.1'
 
 	// RxJava
 	implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
@@ -116,9 +113,9 @@ dependencies {
 
 	// Glide
 	implementation 'com.github.bumptech.glide:glide:4.16.0'
-	kapt 'com.github.bumptech.glide:compiler:4.16.0'
+	ksp 'com.github.bumptech.glide:compiler:4.16.0'
 
-	implementation "androidx.paging:paging-runtime:$paging_version"
+	implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 	// RxJava3 support for paging library
 	implementation "androidx.paging:paging-rxjava3:$paging_version"
 
@@ -126,7 +123,7 @@ dependencies {
 	//	implementation 'com.google.android.exoplayer:exoplayer:2.18.5'
 	//	implementation 'com.google.android.exoplayer:exoplayer-core:2.18.5'
 	//implementation 'com.google.android.exoplayer:exoplayer-dash:2.18.5'
-	def media3_version = '1.2.0'
+	def media3_version = '1.3.1'
 	// For media playback using ExoPlayer
 	implementation "androidx.media3:media3-exoplayer:$media3_version"
 	implementation "androidx.media3:media3-session:$media3_version"
@@ -141,8 +138,8 @@ dependencies {
 	implementation "androidx.media3:media3-ui:$media3_version"
 
 	// Dagger - Hilt
-	implementation("com.google.dagger:hilt-android:$hilt_version")
-	kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
+	implementation "com.google.dagger:hilt-android:$hilt_version"
+	ksp "com.google.dagger:hilt-android-compiler:$hilt_version"
 
 	// Utility
 	implementation 'com.blankj:utilcodex:1.31.1'
@@ -150,7 +147,7 @@ dependencies {
 	implementation 'com.github.anilbeesetti:nextlib:v0.6.0'
 
 	// newpipe yt taken from https://github.com/TeamNewPipe/NewPipe/blob/dev/app/build.gradle#L204
-	implementation 'com.github.TeamNewPipe:NewPipeExtractor:v0.23.1'
+	implementation 'com.github.TeamNewPipe:NewPipeExtractor:v0.24.0'
 
 	// TouchImageView
 	implementation "com.github.MikeOrtiz:TouchImageView:3.3"
