--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-	ext.hilt_version = "2.50"
-	ext.nav_version = "2.7.6"
+	ext.hilt_version = '2.51.1'
+	ext.nav_version = '2.7.7'
 
 	dependencies {
 		classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
@@ -10,8 +10,9 @@ buildscript {
 }
 
 plugins {
-	id 'com.android.application' version '8.2.1' apply false
-	id 'com.android.library' version '8.2.1' apply false
+	id 'com.android.application' version '8.4.0' apply false
+	id 'com.android.library' version '8.4.0' apply false
+	id 'com.google.devtools.ksp' version '1.9.23-1.0.20' apply false
 	id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
 	id "com.diffplug.spotless" version "6.24.0"
 	id "com.github.ben-manes.versions" version "0.49.0"
