--- a/doubletapplayerview/build.gradle
+++ b/doubletapplayerview/build.gradle
@@ -9,8 +9,8 @@ android {
 	buildToolsVersion "34.0.0"
 
 	defaultConfig {
-		minSdkVersion 16
-		targetSdkVersion 34
+		minSdk 28
+		targetSdk 34
 
 		vectorDrawables.useSupportLibrary = true
 
@@ -32,12 +32,15 @@ android {
 		sourceCompatibility JavaVersion.VERSION_11
 		targetCompatibility JavaVersion.VERSION_11
 	}
+    buildFeatures {
+        buildConfig true
+    }
 }
 dependencies {
-	implementation "androidx.recyclerview:recyclerview:1.3.0"
+	implementation 'androidx.recyclerview:recyclerview:1.3.2'
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-	def media3_version = '1.2.0'
+	def media3_version = '1.3.1'
 	// For media playback using ExoPlayer
 	implementation "androidx.media3:media3-exoplayer:$media3_version"
 	implementation "androidx.media3:media3-session:$media3_version"
