--- a/treeview/build.gradle
+++ b/treeview/build.gradle
@@ -8,8 +8,8 @@ android {
 	namespace = "com.mrikso.treeview"
 
 	defaultConfig {
-		minSdkVersion 21
-		targetSdkVersion 30
+		minSdk 28
+		targetSdk 34
 		versionCode 1
 		versionName "1.0"
 
@@ -23,6 +23,7 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 		}
 	}
+
 	compileOptions {
 		sourceCompatibility JavaVersion.VERSION_11
 		targetCompatibility JavaVersion.VERSION_11
@@ -30,6 +31,6 @@ android {
 }
 
 dependencies {
-	implementation "androidx.recyclerview:recyclerview:1.3.0"
-	implementation 'com.google.android.material:material:1.9.0'
+	implementation 'androidx.recyclerview:recyclerview:1.3.2'
+	implementation 'com.google.android.material:material:1.11.0'
 }
