--- a/bottomsheetMenu/build.gradle
+++ b/bottomsheetMenu/build.gradle
@@ -7,21 +7,16 @@ plugins {
 android {
 	compileSdk 34
 	buildToolsVersion "34.0.0"
-	namespace = "com.mazenrashed.bottomsheetmenulib"
+	namespace = "com.mrikso.bottomsheetmenulib"
 
 	defaultConfig {
 		minSdk 28
 		targetSdk 34
-		versionCode 1
-		versionName "1.0"
 
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 		consumerProguardFiles "consumer-rules.pro"
 	}
 
-	lintOptions {
-		abortOnError false
-	}
 
 	compileOptions {
 		sourceCompatibility JavaVersion.VERSION_11
@@ -35,11 +30,14 @@ android {
 	buildFeatures {
 		viewBinding true
 	}
+	lint {
+		abortOnError false
+	}
 }
 
 dependencies {
-	implementation 'androidx.appcompat:appcompat:1.6.1'
-	implementation 'androidx.recyclerview:recyclerview:1.3.2'
-	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-	implementation 'com.google.android.material:material:1.11.0'
+	implementation libs.androidx.appcompat
+	implementation libs.androidx.recyclerview
+	implementation libs.androidx.constraintlayout
+	implementation libs.material
 }
