--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-	ext.hilt_version = '2.51.1'
-	ext.nav_version = '2.7.7'
 
 	dependencies {
-		classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-		classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+		classpath libs.androidx.navigation.safe.args.gradle.plugin
+		classpath libs.hilt.android.gradle.plugin
 	}
 }
 
 plugins {
-	id 'com.android.application' version '8.4.0' apply false
-	id 'com.android.library' version '8.4.0' apply false
-	id 'com.google.devtools.ksp' version '1.9.23-1.0.20' apply false
-	id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
-	id "com.diffplug.spotless" version "6.24.0"
-	id "com.github.ben-manes.versions" version "0.49.0"
+	id 'com.android.application' version '8.4.1' apply false
+	id 'com.android.library' version '8.4.1' apply false
+	id 'com.google.devtools.ksp' version '2.0.0-1.0.21' apply false
+	id 'org.jetbrains.kotlin.android' version '2.0.0' apply false
 }
 
-spotless {
-	groovyGradle {
-		target "**/*.gradle"
-		greclipse()
-	}
-
-	java {
-		target "**/*.java"
-		trimTrailingWhitespace()
-		removeUnusedImports()
-		palantirJavaFormat('2.23.0')
-		indentWithSpaces()
-		endWithNewline()
-		importOrder 'android',
-				'androidx','com', 'dagger',
-				'junit', 'net', 'io', 'org', 'okhttp3', 'retrofit2',
-				'java', 'javax', '', 'static *'
-	}
-}
-
-task cleanBuild(type: Delete) {
+tasks.register('cleanBuild', Delete) {
 	delete rootProject.buildDir
 }
