--- a/doubletapplayerview/build.gradle
+++ b/doubletapplayerview/build.gradle
@@ -24,9 +24,6 @@ android {
 		}
 	}
 
-	lintOptions {
-		abortOnError false
-	}
 
 	compileOptions {
 		sourceCompatibility JavaVersion.VERSION_11
@@ -35,23 +32,25 @@ android {
     buildFeatures {
         buildConfig true
     }
+	lint {
+		abortOnError false
+	}
 }
 dependencies {
-	implementation 'androidx.recyclerview:recyclerview:1.3.2'
-	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+	implementation libs.androidx.recyclerview
+	implementation libs.androidx.constraintlayout
 
-	def media3_version = '1.3.1'
 	// For media playback using ExoPlayer
-	implementation "androidx.media3:media3-exoplayer:$media3_version"
-	implementation "androidx.media3:media3-session:$media3_version"
-	implementation "androidx.media3:media3-datasource:$media3_version"
-	implementation "androidx.media3:media3-decoder:$media3_version"
-	implementation "androidx.media3:media3-common:$media3_version"
-	implementation "androidx.media3:media3-exoplayer-dash:$media3_version"
-	implementation "androidx.media3:media3-exoplayer-hls:$media3_version"
-	implementation "androidx.media3:media3-exoplayer-smoothstreaming:$media3_version"
-	implementation"androidx.media3:media3-exoplayer-rtsp:$media3_version"
+	implementation libs.androidx.media3.exoplayer
+	implementation libs.androidx.media3.session
+	implementation libs.androidx.media3.datasource
+	implementation libs.androidx.media3.decoder
+	implementation libs.androidx.media3.common
+	implementation libs.androidx.media3.exoplayer.dash
+	implementation libs.androidx.media3.exoplayer.hls
+	implementation libs.androidx.media3.exoplayer.smoothstreaming
+	implementation libs.androidx.media3.exoplayer.rtsp
 	// For building media playback UIs
-	implementation "androidx.media3:media3-ui:$media3_version"
+	implementation libs.androidx.media3.ui
 
 }
