--- a/gradle.properties
+++ b/gradle.properties
@@ -21,13 +21,14 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.enableJetifier=true
-android.nonFinalResIds=false
+android.nonFinalResIds=true
 android.nonTransitiveRClass=true
 org.gradle.chaching=true
 org.gradle.configuration-chache=true
-kapt.incremental.apt=true
+org.gradle.parallel=true
 
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 \
+  --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
