--- a/treeview/build.gradle
+++ b/treeview/build.gradle
@@ -10,8 +10,6 @@ android {
 	defaultConfig {
 		minSdk 28
 		targetSdk 34
-		versionCode 1
-		versionName "1.0"
 
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 		consumerProguardFiles "consumer-rules.pro"
@@ -31,6 +29,6 @@ android {
 }
 
 dependencies {
-	implementation 'androidx.recyclerview:recyclerview:1.3.2'
-	implementation 'com.google.android.material:material:1.11.0'
+	implementation libs.androidx.recyclerview
+	implementation libs.material
 }
