--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.activity.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:exported="true"
             android:noHistory="true"
             android:launchMode="singleTask"
@@ -24,7 +24,7 @@
         </activity>
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"
             android:exported="true">
