--- a/gradle.properties
+++ b/gradle.properties
@@ -20,14 +20,14 @@ kotlin.code.style=official
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
-android.enableJetifier=true
+
 android.nonFinalResIds=true
 android.nonTransitiveRClass=true
 org.gradle.chaching=true
 org.gradle.configuration-chache=true
 org.gradle.parallel=true
 
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 \
+org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g \
   --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
