--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,6 +140,7 @@ dependencies {
 	implementation libs.utilcodex
 	implementation libs.m3u8.parser
 	implementation libs.nextlib
+	implementation libs.tagsoup
 
 	// newpipe yt taken from https://github.com/TeamNewPipe/NewPipe/blob/dev/app/build.gradle#L204
 	implementation libs.newpipeextractor
