--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 android-gradle-plugin = "8.4.1"
+commonsText = "1.12.0"
 kotlin = "2.0.0"
 ksp = "2.0.0-1.0.21"
 appcompat = "1.7.0"
@@ -63,6 +64,7 @@ androidx-preference-ktx = { module = "androidx.preference:preference-ktx", versi
 androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayout" }
 circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
 
+commons-text = { module = "org.apache.commons:commons-text", version.ref = "commonsText" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "retrofit" }
 expandabletextview = { module = "com.github.MZCretin:ExpandableTextView", version.ref = "expandabletextview" }
