--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Cancel previous runs
-        uses: style/cancel-workflow-action@0.11.0
+        uses: style/cancel-workflow-action@0.12.1
         with:
           access_token: ${{ github.token }}
 
@@ -35,7 +35,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+
       - name: Build debug apk
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: assembleDebug
+        run: ./gradlew assembleDebug
