--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,16 +10,15 @@ coreSplashscreen = "1.0.1"
 gson = "2.11.0"
 hiltAndroid = "2.51.1"
 jsoup = "1.17.2"
-lifecycleViewmodelKtx = "2.8.2"
-lifecycleLivedataKtx = "2.8.2"
+lifecycleViewmodel = "2.8.4"
 loggingInterceptor = "4.12.0"
 m3u8Parser = "0.28"
 material = "1.12.0"
 constraintlayout = "2.1.4"
 newpipeextractor = "v0.24.0"
 nextlib = "v0.6.0"
-paging = "3.3.0"
-media3Exoplayer = "1.3.1"
+paging = "3.3.1"
+media3Exoplayer = "1.4.0"
 preferenceKtx = "1.2.1"
 recyclerview = "1.3.2"
 retrofit = "2.11.0"
@@ -32,13 +31,13 @@ navigation = "2.7.7"
 tagsoup = "1.2.1"
 subsamplingScaleImageViewAndroidx = "3.10.0"
 utilcodex = "1.31.1"
-annotationJvm = "1.8.0"
+annotationJvm = "1.8.1"
 
 [libraries]
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
-androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
-androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
+androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleViewmodel" }
+androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodel" }
 androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Exoplayer" }
 androidx-media3-exoplayer-rtsp = { module = "androidx.media3:media3-exoplayer-rtsp", version.ref = "media3Exoplayer" }
 androidx-media3-exoplayer-smoothstreaming = { module = "androidx.media3:media3-exoplayer-smoothstreaming", version.ref = "media3Exoplayer" }
