--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,9 +16,9 @@ m3u8Parser = "0.28"
 material = "1.12.0"
 constraintlayout = "2.1.4"
 newpipeextractor = "v0.24.0"
-nextlib = "v0.6.0"
+nextlib = "v0.8.2"
 paging = "3.3.1"
-media3Exoplayer = "1.4.0"
+media3Exoplayer = "1.4.1"
 preferenceKtx = "1.2.1"
 recyclerview = "1.3.2"
 retrofit = "2.11.0"
@@ -77,7 +77,7 @@ m3u8-parser = { module = "io.lindstrom:m3u8-parser", version.ref = "m3u8Parser" 
 material = { module = "com.google.android.material:material", version.ref = "material" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 newpipeextractor = { module = "com.github.TeamNewPipe:NewPipeExtractor", version.ref = "newpipeextractor" }
-nextlib = { module = "com.github.anilbeesetti:nextlib", version.ref = "nextlib" }
+nextlib-media3ext = { module = "com.github.anilbeesetti.nextlib:nextlib-media3ext", version.ref = "nextlib" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 rxjava3-retrofit-adapter = { module = "com.github.akarnokd:rxjava3-retrofit-adapter", version.ref = "rxjava3RetrofitAdapter" }
 rxandroid = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxandroid" }
