--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,8 @@ android.nonTransitiveRClass=true
 org.gradle.chaching=true
 org.gradle.configuration-chache=true
 org.gradle.parallel=true
-
+org.gradle.daemon=true
+org.gradle.daemon.idletimeout=1
 org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g \
   --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
