--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,8 @@
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+kotlin.daemon.jvm.options=-Xmx2g
+kotlin.incremental=true
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
@@ -24,6 +26,7 @@ kotlin.code.style=official
 android.nonFinalResIds=true
 android.nonTransitiveRClass=true
 org.gradle.chaching=true
+org.gradle.configureondemand=true
 org.gradle.configuration-chache=true
 org.gradle.parallel=true
 org.gradle.daemon=true
