--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,16 @@
 [versions]
 android-gradle-plugin = "8.8.2"
-commonsText = "1.13.0"
+commonsText = "1.13.1"
 kotlin = "2.1.10"
 ksp = "2.1.10-1.0.30"
 appcompat = "1.7.0"
 circleimageview = "3.1.0"
 glide = "4.16.0"
 coreSplashscreen = "1.0.1"
-gson = "2.11.0"
+gson = "2.13.1"
 hiltAndroid = "2.51.1"
 jsoup = "1.18.3"
-lifecycleViewmodel = "2.8.7"
+lifecycleViewmodel = "2.9.0"
 loggingInterceptor = "4.12.0"
 m3u8Parser = "0.28"
 material = "1.12.0"
@@ -18,20 +18,22 @@ constraintlayout = "2.2.1"
 newpipeextractor = "v0.24.0"
 nextlib = "v0.8.2"
 paging = "3.3.6"
-media3Exoplayer = "1.5.1"
+media3Exoplayer = "1.7.1"
 preferenceKtx = "1.2.1"
 recyclerview = "1.4.0"
 retrofit = "2.11.0"
-roomRuntime = "2.6.1"
-rxjava = "3.1.8"
+roomRuntime = "2.7.1"
+rxjava = "3.1.10"
 rxandroid = "3.0.2"
 rxjava3RetrofitAdapter = "3.0.0"
 swiperefreshlayout = "1.1.0"
-navigation = "2.8.8"
+navigation = "2.9.0"
 tagsoup = "1.2.1"
 subsamplingScaleImageViewAndroidx = "3.10.0"
 utilcodex = "1.31.1"
 annotationJvm = "1.9.1"
+navigationFragmentKtx = "2.9.0"
+navigationUiKtx = "2.9.0"
 
 [libraries]
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
