--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,6 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
-
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
 #*.jks
@@ -72,3 +71,4 @@ lint/tmp/
 .androidide/
 keystore.properties
 *.jks
+/.idea/
