--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
-	
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <queries>
@@ -17,7 +17,6 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name_title"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -27,6 +26,7 @@
         android:theme="@style/AppTheme"
         tools:targetApi="tiramisu">
 
+        <!-- Splash Screen Activity -->
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true"
@@ -35,40 +35,47 @@
             android:theme="@style/AppTheme.SplashScreen">
         </activity>
 
+        <!-- Main Activity for Phone -->
         <activity
             android:name=".ui.main.MainActivity"
             android:launchMode="singleTask"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
-            <!-- For deep linking. -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="auth"
-                    android:scheme="anitube" />
+                <data android:host="auth" android:scheme="anitube" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <nav-graph android:value="@navigation/nav_graph" />
-
         </activity>
 
+        <!-- TV Activity with Banner -->
+        <activity
+            android:name=".ui.main.TvMainActivity"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:banner="@drawable/tv_banner">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Crash Activity -->
         <activity
             android:name=".ui.CrashActivity"
             android:launchMode="singleTask"
             android:exported="false" />
 
+        <!-- Player Activity -->
         <activity
-            android:exported="false"
             android:name=".ui.player.PlayerActivity"
+            android:exported="false"
             android:configChanges="screenLayout|orientation|screenSize|smallestScreenSize|keyboardHidden|uiMode"
             android:excludeFromRecents="true"
             android:resizeableActivity="true"
