--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:name=".App"
         android:usesCleartextTraffic="true"
         android:enableOnBackInvokedCallback="true"
+        android:banner="@drawable/ic_banner"
         android:theme="@style/AppTheme"
         tools:targetApi="tiramisu">
 
@@ -55,6 +56,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <nav-graph android:value="@navigation/nav_graph" />
