--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:name=".App"
         android:usesCleartextTraffic="true"
         android:enableOnBackInvokedCallback="true"
-        android:banner="@drawable/ic_banner"
+        android:banner="@mipmap/ic_banner"
         android:theme="@style/AppTheme"
         tools:targetApi="tiramisu">
 
